--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.NoActionBar">
-        <activity android:name=".SplashScreen"></activity>
+        <activity android:name=".RegistrationActivity"></activity>
+        <activity android:name=".SplashScreen" />
         <activity android:name=".TranslateActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
